ifcc-test-output/testfiles-24_invalid_undecl_rhs/gcc-compile.txt
input.c: In function ‘main’:
input.c:4:9: error: ‘b’ undeclared (first use in this function)
    4 |     a = b + 1;
      |         ^
input.c:4:9: note: each undeclared identifier is reported only once for each function it appears in

exit status: 1
